# masterThesis

./: .gitignore  LICENSE  README.md
compiler/: CMakeLists.txt  Makefile
compiler/projects/: CMakeLists.txt
compiler/projects/include/DAE/Utils/SkelUtils/: headers.h
compiler/projects/include/Util/Analysis/: LoopCarriedDependencyAnalysis.h
compiler/projects/include/Util/Annotation/: MetadataInfo.h
compiler/projects/src/: CMakeLists.txt
compiler/projects/src/DAE/: CMakeLists.txt
compiler/projects/src/DAE/Transform/: CMakeLists.txt
compiler/projects/src/DAE/Transform/FKernelPrefetch/: CMakeLists.txt  FKernelPrefetch.cpp
compiler/projects/src/DAE/Utils/: CMakeLists.txt
compiler/projects/src/DAE/Utils/LoopChunk/: CMakeLists.txt  LoopChunk.cpp
compiler/projects/src/DAE/Utils/LoopExtract/: CMakeLists.txt  LoopExtract.cpp
compiler/projects/src/DAE/Utils/MarkLoopsToTransform/: CMakeLists.txt  MarkLoopsToTransform.cpp
compiler/projects/src/DAE/Utils/RemoveRedundantPref/: CMakeLists.txt  RemoveRedundantPref.cpp
compiler/projects/src/DAE/Utils/SkelUtils/: CFGhacking.cpp  (+4 more)
compiler/projects/src/Util/Annotation/: MetadataInfo.cpp
compiler/tools/: CMakeLists.txt
compiler/tools/DVFS/: CMakeLists.txt
compiler/tools/DVFS/include/: profiler.h
compiler/tools/DVFS/src/: CMakeLists.txt  profiler.cpp
daedal-scripts/dae-buildscripts/: build-all.sh  build.sh  compile-bench.sh  compileSPEC.sh  set-env.sh
sources/: Makefile
sources/common/: Makefile.environment
sources/common/DAE/: Makefile.defaults  Makefile.targets
sources/myBenchmark/: README.md
(+4 files in other folders)
